--- a/src/components/ma-button/template.html
+++ b/src/components/ma-button/template.html
@@ -5,6 +5,7 @@
       <path d="M12 2a10 10 0 0 1 10 10" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
     </svg>
   </span>
+  <span class="icon-container" part="icon"></span>
   <span class="content" part="content">
     <slot></slot>
   </span>
